migration manager and db context

--- a/DiscoverYourself/appsettings.json
+++ b/DiscoverYourself/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost,1433;database=DiscoverYourself;user id=sa;password=reallyStrongPwd123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
