--- a/DiscoverYourself/appsettings.json
+++ b/DiscoverYourself/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost,1433;database=DiscoverYourself;user id=sa;password=reallyStrongPwd123"
+    "DefaultConnection": "Server=localhost,1433;Database=DiscoverYourself;User Id=sa;Password=reallyStrongPwd123;TrustServerCertificate=True;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
