home development continue

--- a/DiscoverYourself/DiscoverYourself.csproj
+++ b/DiscoverYourself/DiscoverYourself.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Include="wwwroot\css\home_index.css" />
       <None Include="wwwroot\css\login.css" />
       <None Include="wwwroot\css\register.css" />
     </ItemGroup>
