--- a/DiscoverYourself/appsettings.json
+++ b/DiscoverYourself/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "SmtpServer": "",
+    "Port": 0,
+    "SenderEmail": "",
+    "SenderPassword": "",
+    "EnableSsl": true
+  }
 }
