--- a/DiscoverYourself/appsettings.json
+++ b/DiscoverYourself/appsettings.json
@@ -10,10 +10,10 @@
   },
   "AllowedHosts": "*",
   "MailSettings": {
-    "SmtpServer": "",
-    "Port": 0,
-    "SenderEmail": "",
-    "SenderPassword": "",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "lufleor@gmail.com",
+    "SenderPassword": "vbed dnfg patp qihe",
     "EnableSsl": true
   }
 }
