--- a/DiscoverYourself/DiscoverYourself.csproj
+++ b/DiscoverYourself/DiscoverYourself.csproj
@@ -76,6 +76,14 @@
         <Generator>ResXFileCodeGenerator</Generator>
         <LastGenOutput>Register.tr.Designer.cs</LastGenOutput>
       </EmbeddedResource>
+      <EmbeddedResource Update="Resources\Views\Home\Reports.en.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Reports.en.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Resources\Views\Home\Reports.tr.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Reports.tr.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
@@ -138,6 +146,16 @@
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
         <DependentUpon>Register.tr.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\Views\Home\Reports.en.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Reports.en.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\Views\Home\Reports.tr.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Reports.tr.resx</DependentUpon>
       </Compile>
     </ItemGroup>
 
