completed docker compose

--- a/DiscoverYourself/Dockerfile
+++ b/DiscoverYourself/Dockerfile
@@ -7,15 +7,14 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-# Correcting the path here
-COPY ["DiscoverYourself.csproj", "./"]
+
+COPY ["./DiscoverYourself.csproj", "./"] 
 RUN dotnet restore "DiscoverYourself.csproj"
 COPY . .
 WORKDIR "/src"
 RUN dotnet build "DiscoverYourself.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "DiscoverYourself.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
