--- a/DiscoverYourself/DiscoverYourself.csproj
+++ b/DiscoverYourself/DiscoverYourself.csproj
@@ -166,4 +166,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Resources\Views\DevelopmentGoals\" />
+    </ItemGroup>
+
 </Project>
