--- a/DiscoverYourself/DiscoverYourself.csproj
+++ b/DiscoverYourself/DiscoverYourself.csproj
@@ -93,6 +93,14 @@
         <Generator>ResXFileCodeGenerator</Generator>
         <LastGenOutput>Index.tr.Designer.cs</LastGenOutput>
       </EmbeddedResource>
+      <EmbeddedResource Update="Resources\Views\Home\Privacy.tr.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Privacy.tr.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Resources\Views\Home\Privacy.en.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Privacy.en.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
@@ -175,6 +183,16 @@
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
         <DependentUpon>Index.tr.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\Views\Home\Privacy.tr.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Privacy.tr.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\Views\Home\Privacy.en.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Privacy.en.resx</DependentUpon>
       </Compile>
     </ItemGroup>
 
