--- a/DiscoverYourself/DiscoverYourself.csproj
+++ b/DiscoverYourself/DiscoverYourself.csproj
@@ -117,6 +117,14 @@
         <Generator>ResXFileCodeGenerator</Generator>
         <LastGenOutput>BusinessReport.tr.Designer.cs</LastGenOutput>
       </EmbeddedResource>
+      <EmbeddedResource Update="Resources\Views\Reports\EducationReport.en.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>EducationReport.en.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Resources\Views\Reports\EducationReport.tr.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>EducationReport.tr.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
@@ -229,6 +237,16 @@
         <DesignTime>True</DesignTime>
         <AutoGen>True</AutoGen>
         <DependentUpon>BusinessReport.tr.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\Views\Reports\EducationReport.en.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>EducationReport.en.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\Views\Reports\EducationReport.tr.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>EducationReport.tr.resx</DependentUpon>
       </Compile>
     </ItemGroup>
 
